--- a/style.css
+++ b/style.css
@@ -86,16 +86,19 @@ li a:hover
 .hbg
 {
     background-color: #f2f2f2;
-    max-width: 50%;
-    max-height: 60%;
+    max-width: 100%;
+    max-height: 100%;
     margin-left: 30px;
 }
 
 .picture
 {
     display: flex;
-    
+    justify-content: space-between;
+    align-items: flex-start;
 }
+
+
 
 /* bloc activités */
 
