--- a/style.css
+++ b/style.css
@@ -96,7 +96,9 @@ li a:hover
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    
 }
+
 
 
 
@@ -107,6 +109,11 @@ li a:hover
     background-color: #f2f2f2;
 }
 /* bloc populaires */
+
+.populaire
+{
+    display: flex;
+}
 
 
 
