--- a/style.css
+++ b/style.css
@@ -96,27 +96,178 @@ li a:hover
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    
 }
 
 
 
+
+/** EXEMPLE **/
+    
+/* ! HEBERGEMENT */    
+
+.hebergement{
+    display: grid;
+    column-gap: 2rem;
+    grid-template-columns: 6fr 3fr;    
+    margin-bottom: 20px;
+}
+
+.hebergement-container{
+    grid-template-columns: repeat(3, 1fr);
+    background-color: #F2F2F2;
+    border-radius: 1.5rem;
+    padding: 2rem;
+    display: grid;
+    column-gap: 2rem;
+    row-gap: 2rem;
+}
+
+.hebergement-container h2 {
+    grid-column: 1/-1;
+    margin: 0;
+}
+
+.hebergement-vignette{
+    background-color: white;
+    padding: 0.375rem;
+    border-radius: 1.25rem;
+    box-shadow: 0 0 16px #0000002e;
+    transition-duration: 0.1s;
+    cursor: pointer;
+    box-sizing: border-box;
+    height: 100%;    
+}
+
+.hebergement-vignette figure{
+    margin:0
+}
+
+.hebergement-vignette figure img{
+    height: 7rem;
+    object-fit: cover;
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    border-radius: 1rem 1rem 0 0;    
+}
+
+.hebergement-vignette figure h3{
+    margin: 0.25rem 0.75rem 0 0.75rem;
+}
+
+.hebergement-vignette p{
+    margin: 0.25rem 0.75rem 0.25rem 0.75rem;
+}
+
+.hebergement-notation{
+    margin: 0 0.75rem 0.25rem 0.75rem;    
+}
+
+/* Populaires */
+
+.populaire{
+    display: grid;
+    grid-template-rows: auto repeat(3, 1fr); 
+    background-color: #F2F2F2;
+    border-radius: 1.5rem;
+    padding: 2rem;  
+    row-gap: 2rem;
+    align-items: start;
+    grid-template-rows: auto repeat(3, 1fr);  
+}
+
+.populaire h2{
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.populaire-vignette{
+    display: flex;
+    align-items: stretch;
+    height: 100%;
+    overflow: auto;
+    background-color: white;
+    padding: 0.375rem;
+    border-radius: 1.25rem;
+    box-shadow: 0 0 16px #0000002e;
+    transition-duration: 0.1s;
+    cursor: pointer;
+    box-sizing: border-box;
+    height: 100%;   
+    margin:0; 
+}
+
+.populaire-vignette figure{
+    margin: 0;
+    position: relative;
+    min-height: 100%;
+    width: 33%;
+    min-width: 33%;
+    max-width: 33%;    
+}
+
+.populaire-vignette figure img {
+    border-radius: 1rem 0 0 1rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;    
+}
+
+.populaire-contenu{
+    display: flex;
+    flex-direction: column;
+}
+
+.populaire-contenu h3{
+    margin: 0.25rem 0.75rem 0 0.75rem;
+}
+
+.populaire-contenu p{
+    margin: 0.25rem 0.75rem 0.25rem 0.75rem;
+}
+
+.populaire-whitespace{
+    flex: 1;
+}
+
+.populaire-notation{
+    margin: 0 0.75rem 0.25rem 0.75rem;    
+}
+
+.bleu{
+    color: #0065FC;
+}
+
+.clair{
+    color: #d9d9d9;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
 
 /* bloc activités */
 
 .activite
 {
-    background-color: #f2f2f2;
+    
 }
-/* bloc populaires */
 
-.populaire
+.activite-vignette
 {
-    display: flex;
+    margin: 0;
+    position: relative;
+    min-height: 100%;
+    width: 33%;
+    min-width: 33%;
+    max-width: 33%;  
 }
 
 
-
+    
 /* FOOTER */
 .footer
 {
@@ -130,12 +281,4 @@ li a:hover
     display: flex;
     justify-content: space-around;
 }
-.blue
-{
-    color: black;
-}
 
-
-
-
-    
