--- a/style.css
+++ b/style.css
@@ -82,27 +82,6 @@ li a:hover
 
 
 
-/* Bloc hebergements */ 
-.hbg
-{
-    background-color: #f2f2f2;
-    max-width: 100%;
-    max-height: 100%;
-    margin-left: 30px;
-}
-
-.picture
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-
-
-
-/** EXEMPLE **/
-    
 /* ! HEBERGEMENT */    
 
 .hebergement{
@@ -249,24 +228,55 @@ a{
     color: inherit;
 }
 
-/* bloc activités */
+/* Bloc activités */
 
-.activite
-{
+.activite{
+    display: flex;
+    align-items: stretch;
+    align-content: space-between;
+    padding: 2rem;
+    margin: 0;
+}
+
+.activite-container{
+
+    display: flex;
+    flex-direction: column;
+
     
 }
 
-.activite-vignette
-{
-   
+.activite p{
+
+    padding: 2rem;
 }
+
+.activite-vignette{
+
+    display: flex;
+    align-items: stretch;
+    border-radius: 1.25rem;
+    width: 50px;
+    margin: auto;
+    box-shadow: 0 0 16px #0000002e;
+    width: 50%;
+}
+
+.activite-vignette img{
+
+    width: auto;
+    height: 7rem;
+}
+
 
 
     
 /* FOOTER */
-.footer
+footer
 {
     background-color: #f2f2f2;
+    padding: 2rem;
+    
 }
 
 .footer-petit
