--- a/style.css
+++ b/style.css
@@ -410,6 +410,8 @@ footer
     justify-content: space-around;
 }
 
+ /* ---------------------------------------------------- */
+
 
 @media screen and (max-width: 1024px)
 {
@@ -432,6 +434,46 @@ footer
     
         margin-top: 50px;
         
+    }
+
+    /* Icone info */
+
+    .pad-info{
+
+        padding-left: 0;
+        text-align: left;
+    }
+
+
+
+
+    /* Hebergements */
+
+    .hebergement-container{
+
+    background-color: #F2F2F2;
+    border-radius: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+   
+    }
+
+
+    /* Populaires */
+
+    .populaire{
+        display: flex;
+        flex-direction: column;
+        
+        background-color: #F2F2F2;
+        border-radius: 1.5rem;
+        padding: 2rem;  
+        row-gap: 2rem;
+        align-items: start;
+         
     }
 
 
