--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ section
 {
     max-width: 10%;
     max-height: 10%;
-    margin-left: 30px;
+    margin-left: 0px;
 }
 
 .navigation
@@ -44,10 +44,11 @@ ul         /* Config barre de navigation */
     margin-top: 0;
 }
 
-.hbg{
+.hbg a{
 
     border-top: 3px solid #0065FC;
     box-sizing: border-box;
+    color: #0065FC !important;
 
 }
 li a
@@ -55,7 +56,7 @@ li a
     display: flex;
     color: grey;
     text-decoration: none;
-    padding: 15px;
+    padding: 30px;
     font-weight: 600;
 }
  .bleu1{
@@ -66,10 +67,7 @@ li a
  } 
  
 
-li a:hover
-{  
-    color:  #0065FC;
-}
+
 
 .act, .ins{
 
@@ -82,37 +80,33 @@ li a:hover
 
 #adresse
 {
-    border-right: none;
-    border-left: none;
+    border: 1px solid #f2f2f2;
+    padding: 0 1rem;
     
 }
 
 .button
 {
     background-color: #0065FC;
+    border-radius: 0 1rem 1rem 0;
     border: none;
     font-size: 15px;
     color: white;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    padding: 0 1rem;
+    font-weight: bold;
+    font-size: 1rem;
 }
 
 .loc{
  
-    background-color: #d9d9d9;
-    border: 1px solid transparent;
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 10px 0px 0px 10px;
-    width: 20px;
-    height: 20px;
+    background-color: #f2f2f2;
+    padding: 1rem 1.2rem;
+    border-radius: 1rem 0 0 1rem;
 }
 
 form
 {
     display: inline-flex;
-    border-radius: 10px;
 }
 
 /* Config Filtres */
@@ -120,50 +114,72 @@ form
 .filtres
 {
     display: flex;
-    flex-direction: row;                                                                        
+    flex-wrap: wrap; 
     color: black;
-    padding: 10px 30px 10px 10px;
-    
+    font-weight: 700;                                                                      
+    margin-top: 30px;
+}
+
+.filtres h2{
+
+    display: flex;
+    margin: 1rem;
+
+}
+
+.filtres-bouton{
+
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
+    border: 1px solid #d9d9d9;
+    border-radius: 2rem;
+
 }
 
 .filtres-bouton-titre{
 
-    
-    border: 1px solid gray;
-    
+    margin: 0 1rem;
+
 }
 
 .filtres-bouton-gauche
 {
-    
-    height: 20px;
-    width: 20px;
-    border: 1px solid transparent;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3.5rem;
+    width: 3.5rem;
     border-radius: 50%;
     text-align: center;
     padding: 0.2em 0.2em;
     background-color: #DEEBFF;
+
+
 }
 
 /* Icone information */
 
-.infos
-{
+.infos{
 
-height: 20px;
-width: 20px;
-border: 2px solid grey;
-position: relative;
-border-radius: 50%;
-text-align: center;
-padding: 0.2em 0.2em;
-
+    display: flex;
+    align-items: center;
+    margin: 2rem 1rem;
+    font-weight: normal;
 }
-.pad-info{
 
-    padding-left: 9.5em;
+.infos-gauche{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2rem;
+    width: 2rem;
+    border: 1px solid #d9d9d9;
+    border-radius: 50%;
+    margin-right: 1rem;
 }
+
 
 
 
@@ -413,7 +429,7 @@ footer
  /* ---------------------------------------------------- */
 
 
-@media screen and (max-width: 1024px)
+@media screen and (max-width: 600px)
 {
     .logo_reservia   /* Dimension et placement logo (logo_reservia) */
     {
@@ -429,10 +445,22 @@ footer
         position: absolute;
     }
 
-    li .hbg .act
+   .hbg, .act
     {
     
         margin-top: 50px;
+
+    }
+    .hbg{
+
+        width: 50%;
+    }
+
+    .hbg a{
+
+        border-bottom: 3px solid #0065FC;
+        border-top: none;
+        
         
     }
 
