correction indentation / maj responsive

--- a/style.css
+++ b/style.css
@@ -20,7 +20,14 @@ section
     max-width: 1440px;
     margin:auto;
  }  
+ /* main */ 
 
+ main{
+    margin: 0 auto;
+    max-width: 1440px;
+    padding: 0 15px;
+
+ }
 .logo_reservia   /* Dimension et placement logo (logo_reservia) */
 {
     max-width: 8%;
@@ -115,6 +122,11 @@ form
 {
     display: inline-flex;
     margin-top: 1rem;
+}
+
+.fa-search{
+
+    display: none;
 }
 
 /* Config Filtres */
@@ -285,6 +297,7 @@ form
     box-sizing: border-box;
     height: 100%;   
     margin:0; 
+    width: 100%;
 }
 
 .populaire-vignette figure{
@@ -346,7 +359,7 @@ a{
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
     column-gap: 2rem;
-    margin: 4rem auto;
+    margin: 4rem 0;
     max-width: 1440px;
 
 }
@@ -384,6 +397,8 @@ a{
 
 }
 
+@media screen and (min-width: 1100px){
+
 .type1{
 
     grid-row: 2/7;
@@ -420,6 +435,8 @@ a{
     grid-column: 4/5;
 
 }
+
+}
 /* FOOTER */
 
 footer
@@ -431,9 +448,23 @@ footer
 .footer-petit
 {
     max-width: 1440px;
-    margin:auto;
+    margin: auto;
     display: flex;
     justify-content: space-around;
+    
+}
+.container{
+
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    width: 100%;
+}
+
+.container a {
+
+margin-top: 0.8rem;   
+
 }
 
  /* ---------------------------------------------------- */
@@ -446,14 +477,23 @@ footer
         max-width: 20%;
         max-height: 20%;
         margin-left: 10px;
+        
     }
 
     .ins
     {
         right: 0;
         top: 0;
-        position: absolute;
+        position: absolute;   
     }
+
+    .act{
+
+        border-top: none;
+        border-bottom: 3px solid gray;
+    }
+
+    
 
    .hbg, .act
     {
@@ -481,16 +521,31 @@ footer
         padding-left: 0;
         text-align: left;
     }
+    
+    /* Bouton rechercher */ 
 
+    .fa-search{
 
+        display: block;
+    }
+    form button span{
 
+        display: none;
+    }
+
+    /* Filtres */ 
+
+    .filtres{
+
+        display: flex;
+        flex-direction: column;
+    }
 
     /* Hebergements */
 
     .hebergement-container{
 
     background-color: #F2F2F2;
-    border-radius: 0%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -505,13 +560,48 @@ footer
     .populaire{
         display: flex;
         flex-direction: column;
-        
+        width: 100%;
         background-color: #F2F2F2;
         border-radius: 1.5rem;
         padding: 2rem;  
         row-gap: 2rem;
         align-items: start;
          
+    }
+
+    .hebergement{
+
+        grid-template-columns: 1fr;
+        display: flex;
+        flex-wrap: wrap-reverse;
+        row-gap: 2rem;
+    }
+
+    .activite{
+
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
+        row-gap: 2rem;
+    }
+    
+    /* Footer */
+
+    .footer-petit{
+
+        flex-direction: column;
+        padding: 3rem;
+    }
+}
+
+
+@media (min-width: 600px) and (max-width: 1000px)
+
+{
+    .activite{
+
+        grid-template-columns: repeat (2, 1fr);
+        grid-template-rows: auto 12rem 12rem 12rem ;
+        row-gap: 2rem;
     }
 
 
