--- a/style.css
+++ b/style.css
@@ -597,6 +597,55 @@ margin-top: 0.8rem;
 @media (min-width: 600px) and (max-width: 1000px)
 
 {
+    .ins
+    {
+        right: 0;
+        top: 0;
+        position: absolute;   
+    }
+
+    .act{
+
+        border-top: none;
+        border-bottom: 3px solid gray;
+    }
+
+    
+
+   .hbg, .act
+    {
+    
+        margin-top: 50px;
+
+    }
+    .hbg{
+
+        width: 50%;
+    }
+
+    .hbg a{
+
+        border-bottom: 3px solid #0065FC;
+        border-top: none;
+        
+        
+    }
+
+    
+
+    .hebergement {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 2rem;
+        margin-bottom: 20px;
+    }
+
+    .populaire{
+
+        margin: 2rem;
+    }
+
+    
     .activite{
 
         grid-template-columns: repeat (2, 1fr);
