--- a/style.css
+++ b/style.css
@@ -19,7 +19,13 @@ section
  {
     max-width: 1440px;
     margin:auto;
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    grid-template-areas: "logo . nav inscription";
+    
  }  
+
+ 
  /* main */ 
 
  main{
@@ -30,19 +36,46 @@ section
  }
 .logo_reservia   /* Dimension et placement logo (logo_reservia) */
 {
-    max-width: 8%;
-    max-height: 8%;
+    grid-area: logo;
+    padding: 1px;
+    height: 45px;
     margin-left: 0px;
 }
 
 .navigation
 {
-    max-width: 400px;
+    grid-area: nav;
     display: flex;
-    float: right;
+    align-items: center;
 }
 
-ul         /* Config barre de navigation */
+.button_nav{
+
+    padding: 2rem;
+    font-weight: 600;
+    text-align: center;
+    border-top: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+}
+
+.button_actif, .button_nav:hover{
+
+    color: #0065FC;
+    border-top: 3px solid #0065FC;
+}
+ 
+
+       /* Config barre de navigation */
+
+.inscription{
+
+    grid-area: inscription;
+    padding: 2rem;
+    color: #0065FC;
+    font-weight: bold;
+    border-top: 3px solid transparent;
+}
+ul  
 {
     display: flex;
     flex-direction: row;
@@ -126,7 +159,7 @@ form
 
 .fa-search{
 
-    display: none;
+    display: none !important;
 }
 
 /* Config Filtres */
@@ -155,6 +188,8 @@ form
     margin-right: 25px;
     border: 1px solid #d9d9d9;
     border-radius: 2rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
 
 }
 
@@ -372,9 +407,10 @@ a{
 .activite-vignette{
 
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     box-shadow: 0 0 16px #0000002e ;
-    border-radius: 16px;
+    border-radius: 1rem;
 
 }
 .activite-container-image{
@@ -472,19 +508,37 @@ margin-top: 0.8rem;
 
 @media screen and (max-width: 600px)
 {
-    .logo_reservia   /* Dimension et placement logo (logo_reservia) */
+
+    header{
+
+        grid-template-columns: auto 1fr auto ;
+        grid-template-areas: "logo . inscription" "nav nav nav";
+    }
+    
+    /* Dimension et placement logo (logo_reservia) */
+   
+    .logo_reservia{
+
+        order: 0;
+    }   
+
+    .inscription
     {
-        max-width: 20%;
-        max-height: 20%;
-        margin-left: 10px;
+        order: 1;
         
     }
 
-    .ins
-    {
-        right: 0;
-        top: 0;
-        position: absolute;   
+    .button_nav{
+
+        width: 50%;
+        border-top: none;
+        border-bottom: 3px solid #f2f2f2;
+    }
+
+    .button_actif, .button_nav:hover{
+
+        color: #0065FC;
+        border-bottom: 3px solid #0065FC;
     }
 
     .act{
@@ -493,7 +547,10 @@ margin-top: 0.8rem;
         border-bottom: 3px solid gray;
     }
 
-    
+    .navigation{
+
+        order: 2;
+    }
 
    .hbg, .act
     {
@@ -526,7 +583,7 @@ margin-top: 0.8rem;
 
     .fa-search{
 
-        display: block;
+        display: block !important;
     }
     form button span{
 
@@ -538,19 +595,20 @@ margin-top: 0.8rem;
     .filtres{
 
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
+        margin-top: 2rem;
     }
 
     /* Hebergements */
 
     .hebergement-container{
 
-    background-color: #F2F2F2;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
     height: auto;
+    background-color: transparent;
    
     }
 
@@ -566,7 +624,20 @@ margin-top: 0.8rem;
         padding: 2rem;  
         row-gap: 2rem;
         align-items: start;
+        border-radius: 0;
          
+    }
+
+    .populaire h2{
+
+        width: 100%;
+        font-size: 1.5rem;
+    }
+
+    .populaire-whitespace{
+
+        height: 35px;
+        flex: none;
     }
 
     .hebergement{
@@ -582,6 +653,7 @@ margin-top: 0.8rem;
         grid-template-columns: 1fr;
         grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
         row-gap: 2rem;
+        border-radius: ;
     }
     
     /* Footer */
